# agent-skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL_TEMPLATE.md  WAZA-AUDIT.md  os-integrations.skill  settings.local.json
.claude-plugin/: INSTALL.md
.claude/agents/: coder.md  explorer.md
.claude/skills/jira/: SKILL.md  (+1 more)
.codex/: INSTALL.md
.opencode/: INSTALL.md
agents/: coder.md  explorer.md  helper.md
os-integrations/: SKILL.md
os-integrations/references/: presets.yml
os-integrations/scripts/: fetch_worker_pools.py
skills/azure-cost-analysis/: SKILL.md
skills/bigquery/: SKILL.md
skills/bugzilla/: SKILL.md
skills/ci-fix-without-image-change/: SKILL.md
skills/daily-log/: SKILL.md
skills/firefox-ci-test-coverage-by-platform/: SKILL.md
skills/jira/: .gitignore  SKILL.md
skills/jira/scripts/: extract_jira.py  pyproject.toml
skills/lando/: SKILL.md
skills/os-integrations/: SKILL.md
skills/papertrail/: SKILL.md
skills/queue-diagnosis/: SKILL.md
skills/redash/: SKILL.md
skills/sheriff-triage/: SKILL.md
skills/skill-checker/: SKILL.md
skills/skill-creator/scripts/: .gitignore  pyproject.toml  quick_validate.py
skills/splunk/: SKILL.md
skills/task-discovery/: SKILL.md
skills/taskcluster/: .gitignore  README.md  SKILL.md
skills/taskcluster/scripts/: config.toml.example  pyproject.toml  tc.py
skills/treeherder/: HANDOFF-RELOPS-2138-win11-24h2-test-failures.md  SKILL.md  pyproject.toml
skills/treeherder-status/: SKILL.md
skills/win11-24h2-files/: SKILL.md
skills/win11-files/: SKILL.md
worker-image-build/: SKILL.md
(+98 files in other folders)
