[project]
name = "jira-extractor"
version = "0.1.0"
description = "Extract JIRA stories from Mozilla JIRA"
requires-python = ">=3.10"
dependencies = [
    "jira>=3.10.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a7",
]

[project.scripts]
jira-extract = "extract_jira:main"

[tool.ty.environment]
# Enable Python 3.10+ compatibility
python-version = "3.10"
