[project]
name = "skill-creator-scripts"
version = "0.1.0"
description = "Scripts for creating and validating Claude Code skills"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
init-skill = "init_skill:main"
package-skill = "package_skill:main"
validate-skill = "quick_validate:main"
